# PKGBUILDs

./: .SRCINFO  .gitignore  .pre-commit-config.yaml  PKGBUILD  README.md  hatch_build.py  nvcheck.py  nvchecker.py  nvchecker.toml  pyproject.toml  update.py
.github/workflows/: ci.yml  upgpkg.yml
pkgs/camset/: .gitignore
pkgs/desktop-privileges-nogroups/: .SRCINFO  PKGBUILD
pkgs/hisat2/: .SRCINFO  PKGBUILD
pkgs/jupyterlab-extension-ipycytoscape/: .SRCINFO  PKGBUILD
pkgs/jupyterlab-extension-jupyterlab_git/: .SRCINFO  PKGBUILD
pkgs/jupyterlab-myst/: .SRCINFO  PKGBUILD
pkgs/libleidenalg/: .SRCINFO  .gitignore  PKGBUILD
pkgs/nbmanager-git/: .SRCINFO  PKGBUILD
pkgs/nbopen/: .SRCINFO  PKGBUILD
pkgs/otf-texgyre-pagella-math/: .SRCINFO  PKGBUILD
pkgs/python-adjusttext/: .SRCINFO  PKGBUILD
pkgs/python-alembic-autogenerate-enums/: .SRCINFO
pkgs/python-altgraph/: .SRCINFO  PKGBUILD
pkgs/python-anndata/: .SRCINFO  PKGBUILD
pkgs/python-anndata2ri/: .SRCINFO  PKGBUILD
pkgs/python-array-api-compat/: .SRCINFO  PKGBUILD
pkgs/python-cmake-bin/: .SRCINFO  .gitignore  PKGBUILD
pkgs/python-conda/: .SRCINFO  .gitignore  PKGBUILD
pkgs/python-conda-libmamba-solver/: .SRCINFO  PKGBUILD
pkgs/python-connection_pool/: .gitignore
pkgs/python-entry-points-txt/: .SRCINFO  PKGBUILD
pkgs/python-falcon-cors/: .SRCINFO
pkgs/python-fintech/: .SRCINFO  PKGBUILD
pkgs/python-hatch-docstring-description/: .SRCINFO  PKGBUILD
pkgs/python-headerparser/: .SRCINFO  PKGBUILD
pkgs/python-ipynbname/: .SRCINFO  PKGBUILD
pkgs/python-itertools-len/: .SRCINFO  PKGBUILD
pkgs/python-legacy-api-wrap/: PKGBUILD
pkgs/python-leidenalg/: .SRCINFO  PKGBUILD
pkgs/python-libmamba/: .SRCINFO  PKGBUILD
pkgs/python-loompy/: PKGBUILD
pkgs/python-louvain-igraph/: .SRCINFO  PKGBUILD
pkgs/python-mizani/: .SRCINFO  PKGBUILD
pkgs/python-mnnpy/: .SRCINFO
pkgs/python-numcodecs/: .SRCINFO  PKGBUILD
pkgs/python-okta-legacy/: .SRCINFO
pkgs/python-plotnine/: .SRCINFO  PKGBUILD
pkgs/python-profimp/: .SRCINFO
pkgs/python-pubchempy/: .SRCINFO  PKGBUILD
pkgs/python-pyefd/: .SRCINFO  PKGBUILD
pkgs/python-pyjnius/: .SRCINFO  PKGBUILD
pkgs/python-qtconsole-git/: PKGBUILD
pkgs/python-qtico/: .SRCINFO  PKGBUILD
pkgs/python-scanpydoc/: .SRCINFO  PKGBUILD
pkgs/python-scvelo/: .SRCINFO  PKGBUILD
pkgs/python-session-info2/: .SRCINFO  PKGBUILD
pkgs/python-soundcard-git/: PKGBUILD
pkgs/python-spectate/: PKGBUILD
pkgs/python-stdeb/: .SRCINFO  PKGBUILD
pkgs/python-tiledb/: .SRCINFO  PKGBUILD
pkgs/python-tuna/: .SRCINFO  .pre-commit-config.yaml  PKGBUILD  README.md  hatch_build.py  pyproject.toml
pkgs/python-tuna/pkgs/jupyterlab-extension-jupyterlab_git/: .SRCINFO  PKGBUILD
pkgs/python-tuna/pkgs/python-array-api-compat/: .SRCINFO
pkgs/python-tuna/pkgs/python-fintech/: .SRCINFO  PKGBUILD
pkgs/python-tuna/pkgs/python-zarr/: .SRCINFO
pkgs/python-tuna/src/nvcheck/: main.py  nvchecker.py  srcinfo.py  utils.py
pkgs/python-tuna/src/nvcheck/update/: __init__.py
pkgs/python-tuna/tests/: test_sync.py
pkgs/python-web-pdb/: .SRCINFO  PKGBUILD
pkgs/python-wheel-filename/: .SRCINFO  PKGBUILD
pkgs/python-wheel-inspect/: .SRCINFO  PKGBUILD
pkgs/python-zarr/: .SRCINFO  PKGBUILD
pkgs/resvg/: .SRCINFO  PKGBUILD
pkgs/scanpy/: .SRCINFO  PKGBUILD
pkgs/scanpy-git/: .SRCINFO
pkgs/terrafirma/: .SRCINFO  .gitignore  PKGBUILD
pkgs/twemoji-mozilla-fontconfig/: .SRCINFO  .gitignore  75-twemoji-mozilla.conf  PKGBUILD
python-anndata/: .SRCINFO  PKGBUILD
src/nvcheck/: __main__.py  github.py  main.py  nvchecker.py  srcinfo.py  sync.py  update.py  utils.py
src/nvcheck/update/: __init__.py  branch.py  cratesio.py  github.py  pkgbuilds.py  pypi.py
src/nvcheck/update/sources/: __init__.py  _source.py  cratesio.py  github.py  pypi.py
tests/: test_sources.py  test_sync.py
