[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "nvcheck"
description = "Run NVChecker on all PKGBUILD packages"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Philipp Angerer", email = "philipp.angerer@helmholtz-munich.de" }]
readme = "README.md"
dependencies = [
    "nvchecker[pypi]",
    "srcinfo",
    "httpx[http2,brotli,zstd]",
    "packaging",
    "githubkit",
    "pygit2",
]
dynamic = ["version"]
optional-dependencies.test = ["pytest"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/nvcheck", "src/aurweb_client"]

[tool.hatch.envs.default]
installer = "uv"
extra-dependencies = [ "types-pygit2", "openapi-python-client" ]
scripts.pkg-add = "git subtree add -P pkgs/{args} ssh://aur@aur.archlinux.org/{args}.git master"
scripts.pkg-push = "git subtree push -P pkgs/{args} ssh://aur@aur.archlinux.org/{args}.git master"
scripts.gen-client = "openapi-python-client generate --url=https://aur.archlinux.org/rpc/openapi.json --output-path=src/aurweb_client --meta=none"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--doctest-modules",
    "--pyargs",
]
filterwarnings = ["error"]
xfail_strict = true

[tool.ruff]
src = ["src"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # Error detected by Pycodestyle
    "F",   # Errors detected by Pyflakes
    "W",   # Warning detected by Pycodestyle
    "PLW", # Pylint
    "UP",  # pyupgrade
    "I",   # isort
    "TCH", # manage type checking blocks
    "TID", # Banned imports
    "ICN", # Follow import conventions
    "PTH", # Pathlib instead of os.path
    "PT",  # Pytest conventions
]
ignore = [
    "TID252", # dot imports from parents are useful
]
[tool.ruff.lint.isort]
known-first-party = ["nvcheck"]
required-imports = ["from __future__ import annotations"]
[tool.ruff.lint.flake8-type-checking]
exempt-modules = []
strict = true
