[build-system]
build-backend = "hatchling.build"
# https://github.com/openapi-generators/openapi-python-client/issues/1174
requires = ["hatchling", "hatch-vcs", "openapi-python-client", "pydantic==2.9.*"]

[project]
name = "nvcheck"
description = "Run NVChecker on all PKGBUILD packages"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Philipp Angerer", email = "philipp.angerer@helmholtz-munich.de" }]
readme = "README.md"
dependencies = [
    "nvchecker[pypi]",
    "pyalpm",
    "srcinfo",
    "httpx[http2,brotli,zstd]",
    "packaging",
    "githubkit",
    "pygit2",
    "attrs",  # for generated client
]
dynamic = ["version"]
optional-dependencies.test = ["pytest"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.custom]
[tool.hatch.build.targets.wheel]
packages = ["src/nvcheck", "src/aurweb_client"]

[tool.hatch.envs.default]
installer = "uv"
extra-dependencies = [ "types-pygit2" ]
scripts.pkg-add = "git subtree add -P pkgs/{args} ssh://aur@aur.archlinux.org/{args}.git master"
scripts.pkg-pull = "git subtree pull -P pkgs/{args} ssh://aur@aur.archlinux.org/{args}.git master"
scripts.pkg-push = "git subtree push -P pkgs/{args} ssh://aur@aur.archlinux.org/{args}.git master"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--doctest-modules",
    "--pyargs",
    "--ignore=hatch_build.py",
    "--ignore=pkgs",
]
filterwarnings = ["error"]
xfail_strict = true

[tool.ruff]
src = ["src"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # Error detected by Pycodestyle
    "F",   # Errors detected by Pyflakes
    "W",   # Warning detected by Pycodestyle
    "PLW", # Pylint
    "UP",  # pyupgrade
    "I",   # isort
    "TCH", # manage type checking blocks
    "TID", # Banned imports
    "ICN", # Follow import conventions
    "PTH", # Pathlib instead of os.path
    "PT",  # Pytest conventions
]
ignore = [
    "TID252", # dot imports from parents are useful
]
[tool.ruff.lint.per-file-ignores]
"src/**" = ["PT015"] # `assert False`
[tool.ruff.lint.isort]
known-first-party = ["nvcheck", "aurweb_client"]
required-imports = ["from __future__ import annotations"]
[tool.ruff.lint.flake8-type-checking]
exempt-modules = []
strict = true
